# makefour

./: .gitignore  README.md  biome.json  drizzle.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  schema.sql  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  wrangler.toml
training/: .gitignore  README.md  TRAINING_AGENT_PROMPT.md  pyproject.toml  requirements.txt
training/configs/: export.yaml  self_play.yaml
training/configs/train/: supervised-mlp-medium.yaml  supervised-mlp-small.yaml  supervised-mlp-tiny.yaml  test-quick.yaml
training/scripts/: __init__.py  evaluate.py  experiments.py  export.py  launch_cnn_training.py  launch_resnet_training.py  launch_training.py  self_play.py  tournament.py  train.py  train_imitation.py  train_oracle.py  train_oracle_cnn.py  train_oracle_resnet.py  train_selfplay.py  train_selfplay_fast.py  train_selfplay_v3.py
training/src/: __init__.py
training/src/data/: __init__.py  dataset.py  encoding.py  export.py  game.py  validation.py
training/src/deploy/: __init__.py  cli.py  registry_update.py  upload.py
training/src/evaluation/: __init__.py  agents.py  analysis.py  arena.py  elo.py
training/src/export/: __init__.py  metadata.py  onnx_export.py  validation.py
training/tests/: __init__.py  test_callbacks.py  test_dataset.py  test_deploy.py  test_encoding.py  test_evaluation.py  test_export.py  test_game.py  test_losses.py  test_models.py  test_optimizers.py  test_self_play.py  test_tracking.py  test_trainer.py  test_validation.py
(+232 files in other folders)
